--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,3 +1,12 @@
+a {
+  color: #0070f3 !important;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 form {
   width: 100%;
 }
