--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -7,3 +7,19 @@
   margin-inline-end: 0px;
   padding-inline-start: 40px;
 }
+
+.post h2 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.5;
+  margin: 1rem 0 1rem 0;
+  /* text-transform: uppercase; */
+}
+
+.post p {
+  margin: 1rem 0 1rem 0;
+}
+
+.post p:first-child {
+  margin-top: 0;
+}
