--- a/src/app/global.css
+++ b/src/app/global.css
@@ -14,3 +14,21 @@ form {
 pre {
   font-size: 14px;
 }
+
+em {
+  border-left: 7px solid dodgerblue;
+  border-radius: 5px;
+  display: block;
+  line-height: inherit;
+  padding: 5px;
+}
+
+.chakra-ui-light em {
+  background-color: ghostwhite;
+  color: black;
+}
+
+.chakra-ui-dark em {
+  background: #282a36;
+  color: #ffcc00;
+}
