--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,5 +1,5 @@
 a {
-  color: #1970F1 !important;
+  color: #1970f1 !important;
   text-decoration: none;
 }
 
@@ -9,6 +9,10 @@ a:hover {
 
 form {
   width: 100%;
+}
+
+p {
+  line-height: 1.75rem;
 }
 
 pre {
