--- a/src/app/global.css
+++ b/src/app/global.css
@@ -27,6 +27,30 @@ em {
   padding: 5px;
 }
 
+blockquote {
+  margin: 0;
+  padding: 20px;
+  border-left: 4px solid #333;
+  background-color: #f5f5f5;
+  color: #333;
+  font-style: italic;
+}
+
+blockquote p {
+  margin: 0;
+}
+
+blockquote:before {
+  content: "\201C";
+  font-size: 30px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+blockquote:after {
+  content: "";
+}
+
 .chakra-ui-light em {
   background-color: ghostwhite;
   color: black;
