chore: add ol style

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -15,6 +15,16 @@ p {
   line-height: 1.75rem;
 }
 
+ol {
+  padding-left: 20px;
+  margin: 0;
+  list-style-type: decimal;
+}
+
+ol li {
+  font-weight: 900;
+}
+
 pre {
   font-size: 14px;
 }
