feat: implement header using new design

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,10 +1,9 @@
 a {
-  color: #1970f1 !important;
   text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 form {
