--- a/src/app/global.css
+++ b/src/app/global.css
@@ -29,7 +29,7 @@ pre {
 }
 
 em {
-  border-left: 7px solid dodgerblue;
+  border-left: 7px solid #6d54d0;
   border-radius: 5px;
   display: block;
   line-height: inherit;
@@ -66,7 +66,7 @@ blockquote:after {
 }
 
 .chakra-ui-dark em {
-  border-left: 7px solid dodgerblue;
+  border-left: 7px solid #6d54d0;
   border-radius: 5px;
   display: inline-block;
   line-height: inherit;
