chore: update global styles and components

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -27,13 +27,19 @@ ol li {
 pre {
   font-size: 14px;
 }
+p {
+  font-size: 18px;
+}
+strong {
+  font-weight: 500;
+}
 
 em {
-  border-left: 7px solid #6d54d0;
+  border-left: 4px solid #6d54d0;
   border-radius: 5px;
   display: block;
   line-height: inherit;
-  padding: 5px;
+  padding: 5px 5px 5px 16px;
 }
 
 blockquote {
@@ -61,7 +67,7 @@ blockquote:after {
 }
 
 .chakra-ui-light em {
-  background-color: ghostwhite;
+  background-color: #f2efe5;
   color: black;
 }
 
