--- a/src/styles/prism-themes.css
+++ b/src/styles/prism-themes.css
@@ -28,11 +28,12 @@
   margin: 0.5em 0;
   overflow: auto;
   border-radius: 0.3em;
+  border: 1px solid #1c1c1c;
 }
 
 .dark :not(pre) > code[class*="language-"],
 .dark pre[class*="language-"] {
-  background: black;
+  background: #111111;
 }
 
 /* Inline code */
